catkin_ws/logs/backend/build.make.250.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp: In function ‘void logPoseGraphNode(const SLAM::Frame&, const Isometry3d&)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:76:39: error: passing ‘const SLAM::Frame’ as ‘this’ argument of ‘bool SLAM::Frame::getNewNodeFlag()’ discards qualifiers [-fpermissive]
  bool new_node = frame.getNewNodeFlag();
                                       ^
make[2]: *** [CMakeFiles/backend.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/backend.dir/all] Error 2
make: *** [all] Error 2
